deploy/kind/service-public-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-api-server-public
  namespace: gecko-system
spec:
  type: NodePort
  selector:
    app: platform-api-server
  ports:
    - name: public
      port: 8081
      targetPort: public
      nodePort: 30081
      protocol: TCP
